# pythagoras

./: .coverage  .gitignore  README.md  app.py  card.py  module.py  proxyData.py  pyproject.toml  pytest.ini  pythagoras.js  roles.py
cards/: Configuration.py  DataImport.py  DataPlaceholders.py  DataTable.py  DataTabulation.py  RoleAssignment.py  temp.py
config/: pythagoras.json  pythagoras.schema.json
data/: Assmnt.csv
data/lexicons/afinn/: afinn_111.rds
data/lexicons/bing/: bing.rds
markdown/: config.md  configuration.md  dataImport.md  dataPlaceholders.md  dataTable.md  dataTabulation.md  myCard.md  roleAssign.md  template.md
markdown/markdown/: Bookmark.md  ClusDensity.md  ClusMixture.md  ClusPartition.md  ClusTopology.md  DataImport.md  DataMissMap.md  DataMissRules.md  DataMissSets.md  DataParallel.md  DataRecipe.md  DataSequence.md  DataTable.md  DiagConfig.md  DiagMonitor.md  DiagProfiler.md  MissImpute.md  ObsCluster.md  ObsDependence.md  ObsDrift.md  ObsDuplicates.md  ObsKClusters.md  ObsOutliers.md  ObsSummary.md  TypeMismatch.md  VarCardinality.md  VarCorrelation.md  VarCoverage.md  VarDissimilar.md  VarDistribution.md  VarMissType.md  VarModify.md  VarPlots.md  VarRoles.md  VarSparsity.md  VarSpatial.md  VarSummary.md  VarTemporal.md  VarTextFeatures.md  VarTimeFeatures.html  (+2 more)
tests/: test_card.py  test_configuration.py  test_dataPlaceholders.py  test_module.py  test_proxyData.py  test_roleAssign.py  test_roles.py  utils.py
www/: clipboard.js  console.js  guide.js  markdown_tabsets.js  pythagoras.css  pythagoras.js  shepherd.css  shepherd.js
(+4 files in other folders)
