[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pythagoras"
version = "0.1.0"
description = "Shiny-for-Python app with card-based analytics"
readme = "README.md"
requires-python = ">=3.9.6"
authors = [{ name = "Nick Ward" }]
dependencies = [
  "shiny>=1.0.0",
  "shinywidgets>=0.3.1",
  "pandas>=2.0",
  "plotly>=5.18",
  "numpy>=1.24",
  # add: geopandas, narwhals, polars, etc. if used
]

[project.scripts]
pythagoras = "app:main"   # lets users run `pythagoras`

[tool.hatch.build]
include = [
  "www/**",
  "markdown/**",
  "data/**",
]